--- a/src/Styles/ProductCarousel.css
+++ b/src/Styles/ProductCarousel.css
@@ -66,6 +66,7 @@
 	background-color: rgba(255, 255, 255, 0.9);
 	box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
 	pointer-events: auto;
+	z-index: -1;
 }
 
 .product-carousel__scroll-button:hover {
@@ -76,10 +77,12 @@
 
 .product-carousel__scroll-button--left {
 	left: -22px;
+	z-index: 2 !important;
 }
 
 .product-carousel__scroll-button--right {
 	right: -22px;
+	z-index: 2 !important;
 }
 
 .product-card__wrapper {
@@ -155,7 +158,6 @@
 	cursor: pointer;
 	color: #ff6b6b;
 	padding: 0;
-	z-index: 15;
 	transition: all 0.2s ease;
 	display: flex;
 	justify-content: center;
@@ -262,7 +264,6 @@
 	position: absolute;
 	right: 10px;
 	top: 200px;
-	z-index: 15;
 	border: none;
 	border-radius: 4px;
 	padding: 4px;
